python-api-helm-chart/templates/side-car-integration/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: python-api-gateway

spec:
  selector:
    istio: ingressgateway

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
