python-api-helm-chart/templates/side-car-integration/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: python-api-vs

spec:
  hosts:
    - "*"

  gateways:
    - python-api-gateway

  http:
    - match:
        - uri:
            prefix: /api/
      rewrite:
        uri: /
      route:
        - destination:
            host: python-api
            port:
              number: 80
